freest/test/prog/Invalid/Scoping/TypeSigLacksBinding/TypeSigLacksBinding.fst
module TypeSigLacksBinding where

type T : 1S